--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html>
   <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/KK9bwTlAvgo" frameborder="0" allowfullscreen></iframe>
   </div>
   <body>
-    <p>This is a <strong><a href=https://www.youtube.com/user/theyearinreview>YouTube Rewind</a></strong> for 2015. I think it captures the idea of humans creating media for their own enjoyment, and the poewr of them to come back at the end of a year to see what was accomplished, and what was watched, listened and read most throughout the year.</p>
+    <p>This is a <a href="https://www.youtube.com/user/theyearinreview">YouTube Rewind</a> for 2015. I think it captures the idea of humans creating media for their own enjoyment, and the poewr of them to come back at the end of a year to see what was accomplished, and what was watched, listened and read most throughout the year.</p>
   </body>
 </html>
